Perform lab 4. Create db and files ItemDao, ItemEntity, modified Adapter, MainActivity, AppDatabase.

--- a/Lab_3/app/src/main/res/layout/activity_main.xml
+++ b/Lab_3/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,14 @@
     android:layout_height="match_parent"
     android:background="@color/light_background">
 
+    <Button
+        android:id="@+id/clearDbButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Очистити базу даних"
+        android:layout_gravity="center"
+        android:layout_marginTop="16dp" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
